--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -12,6 +12,9 @@
 	\acro{RL}{Reinforcement Learning}
 	\acro{NLP}{Natural Language Processing}
 	
+	% Conferences
+	\acro{ICML}{\href{https://icml.cc/}{International Conference on Machine Learning}}
+	
 	\acro{prob}[prob.]{probability}
 	\acro{param}[params.]{parameters}
 	\acro{algor}[algor.]{algorithms}
@@ -45,6 +48,7 @@
 	\acro{PCA}{Principal Component Analysis}
 	\acro{LDA}{Linear Discriminant Analysis}
 	\acro{KL}[K-L]{Kullback–Leibler}
+	\acro{IG}{Information Gain}
 	
 	% Mathematics & Optimization
 	\acro{KKT}{Karush-Kuhn-Tucker}
@@ -63,7 +67,7 @@
 	\acro{RNN}{Recurrent Neural Network}
 	\acro{CNN}{Convolutional Neural Network}
 	\acro{VAE}{Variational Auto-Encoders}
-	
+	\acro{GAN}{Generative Adversarial Network}
 	
 	% Probabilistic Robotics
 	\acro{KF}{Kalman Filter}
@@ -87,6 +91,12 @@
 	\acro{MVE}{Model-based Value Expansion}
 	\acro{MBPO}{Model-based Policy Optimization}
 	\acro{UCB}{Upper Confidence Bounce}
+	\acro{PAC}{Probably Approximately Correct}
+	\acro{CQL}{Conservative Q-learning}
+	\acro{MOPO}{Model-Based Offline Policy Optimization}
+	\acro{IRL}{Inverse Reinforcement Learning}
+	\acro{MaxEnt}{Maximum Entropy}
+	\acro{MAML}{Model-Agnostic Meta-Learning}
 	
 	% Computer vision related
 	\acro{DPM}{Deformable Part Model}
