--- a/RL_notes.tex
+++ b/RL_notes.tex
@@ -35,8 +35,11 @@ fleqn
 	\include{Contents/model-based-rl-latent-space.tex}
 	\include{Contents/model-based-policy-learning.tex}
 	\include{Contents/rl-exploration.tex}
+	\include{Contents/control-as-inference.tex}
+	\include{Contents/offline-rl.tex}
 	\include{Contents/inverse-rl.tex}
-	
+	\include{Contents/transfer-and-multitask-learning.tex}
+	\include{Contents/meta-learning.tex}	
 	\include{Contents/rl-challenges-open-probs.tex}
 	
 	\backmatter
