--- a/math_notes.tex
+++ b/math_notes.tex
@@ -28,6 +28,7 @@ fleqn
 	
 	\include{Contents/matrix.tex}
 	\include{Contents/math-probabilities.tex}
+	\include{Contents/information-theory.tex}
 	\include{Contents/convexity.tex}
 	\include{Contents/optimality.tex}
 	\include{Contents/optimization.tex}
