--- a/robotics.tex
+++ b/robotics.tex
@@ -24,9 +24,12 @@ fleqn
 	\tableofcontents
 	
 	\mainmatter
-	\include{Contents/abbrievations.tex}	
+	\include{Contents/robotics-intro.tex}
+	\include{Contents/abbrievations.tex}
 	\include{Contents/probabilistic-robotics.tex}
 	\include{Contents/mdp.tex}
+	
+	\include{Contents/research-proposal.tex}
 	
 	\backmatter
 	\pagenumbering{Roman}
